k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: weather-api
spec:
 replicas: 3
 selector:
  matchLabels:
   app: weather
 template:
  metadata:
   labels:
    app: weather
  spec:
   containers:
   - name: weather
     image: weather-api:latest
     ports:
     - containerPort: 8000
