k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: weather-api
spec:
 selector:
  app: weather
 ports:
 - port: 80
   targetPort: 8000
