k8s/networkpolicy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: weather-egress-restrict
  namespace: weather
spec:
  podSelector:
    matchLabels:
      app: weather-api
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app: redis-proxy
      ports:
        - protocol: TCP
          port: 6379
